<resources>
    <string name="app_name">urMusic</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_recovery_activity">Recovery your account</string>
    <string name="loading">Loading. Please wait...</string>
    <string name="default_notification_channel_id">default_notification</string>
    <string name="prompt_email">E-MAIL</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="prompt_city">CITY</string>
    <string name="prompt_state">STATE</string>
    <string name="prompt_country">COUNTRY</string>
    <string name="prompt_confirm_password">CONFIRM PASSWORD</string>
    <string name="prompt_name">NAME</string>
    <string name="prompt_nickname">USER</string>
    <string name="prompt_birthday">Date of Birth</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_up">Log in</string>
    <string name="action_recovery">Send</string>
    <string name="action_pass_recovery">Recovery Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password must be between 6 and 12 characters</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_letter">Only letters are allowed</string>
    <string name="error_confirm_password">Different passwords</string>
    <string name="error_invalid_login">Email or password incorrect</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_text">Welcome to urMusic</string>
    <string name="title_activity_default">urMusic</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Publications</string>
    <string name="title_dashboard_publication">Post</string>
    <string name="title_dashboard_star">Publications Star</string>
    <string name="title_notifications">Notifications</string>
    <string name="close">Close</string>
    <string name="error_recovery_account">Error in recovery password</string>
    <string name="error_register_account">Error in register</string>
    <string name="error_invalid_account">Invalid account, try again</string>
    <string name="success_register_account">Account Registered</string>
    <string name="success_recovery_account">Account Recovered</string>
    <string name="success_recovery_account_text">Account recovery sent in registered email</string>
    <string name="register_confirm_account">Success Register! Confirm your account in your email</string>
    <string name="recovery_account">Your recovery link has been send to your email</string>
    <string name="necessary_confirmation">Confirm your account</string>
    <string name="necessary_confirmation_text">To access your account you need confirm your account in your email</string>
    <string name="account_banned">Your account is banned</string>
    <string name="account_banned_text">Your account is banned, contact us for clarification</string>
    <string name="error_title">Contact your system administrator</string>
    <string name="error">An unexpected error has occurred, contact your system administrator</string>
    <string name="error_edit_profile">Failed to update your profile, try again later</string>
    <string name="logoff">Logoff</string>
    <string name="language">Language</string>
    <string name="politics">Terms and Policies</string>
    <string name="update_profile_success">Profile updated</string>
    <string name="success">Success</string>
    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>
    <string-array name="sports_array">
        <item>Photos</item>
        <item>Video</item>
        <item>Audio</item>
        <item>Mark Friends</item>
    </string-array>
    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="title_activity_teste_login">TesteLoginActivity</string>
    <string name="title_activity_gosto_musical">Record your musical taste</string>
    <string name="title_activity_gosto_favorito">Now, sign up for your favorite musical taste</string>
    <string name="prompt_publication">What\'s on your mind?</string>
    <string name="error_gosto_musical">No musical taste selected</string>
    <string name="prompt_post">Publish</string>
    <string name="skip">SKIP</string>
    <string name="publication_success">Successful posting</string>
    <string name="intro_title">Welcome to urMusic</string>
    <string name="intro_message">Come and be part of this musical network!</string>
    <string name="intro_title2">Register</string>
    <string name="intro_message2">Meet music, friends and events@</string>
    <string name="intro_title3">Target Audience</string>
    <string name="intro_message3">Promote your work, events and your music to an audience that loves the same as you!</string>
    <string name="esqueceu_sua_senha">Forgot your password?</string>
    <string name="precisando_de_uma_conta">Need an account?</string>
    <string name="old_password">Current password</string>
    <string name="error_old_password_invalid">Old password does not match</string>
    <string name="response">responses</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="edit_profile">Edit Profile</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
</resources>