<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mgovea.urmusic.register.InfosRegisterFragment1">

    <EditText
        android:id="@+id/name"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/borda_screen"
        android:drawablePadding="10dp"
        android:drawableStart="@mipmap/ic_icon_round"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/nickName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/borda_screen"
        android:drawablePadding="10dp"
        android:drawableStart="@mipmap/ic_icon_round"
        android:hint="@string/prompt_nickname"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/borda_screen"
        android:drawablePadding="10dp"
        android:drawableStart="@mipmap/ic_icon_round"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/nickName"
        app:layout_constraintStart_toStartOf="@+id/nickName"
        app:layout_constraintTop_toBottomOf="@+id/nickName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/borda_screen"
        android:drawablePadding="10dp"
        android:drawableStart="@mipmap/ic_icon_round"
        android:hint="@string/prompt_password"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/borda_screen"
        android:drawablePadding="10dp"
        android:drawableStart="@mipmap/ic_icon_round"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/prompt_confirm_password"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />


</android.support.constraint.ConstraintLayout>