<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.edu.puccamp.app.profile.EditPasswordActivity"
    tools:showIn="@layout/activity_edit_password">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/old_password"
        app:layout_constraintBottom_toTopOf="@+id/et_new_password"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="181dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/new_password"
        app:layout_constraintBottom_toTopOf="@+id/et_confirm_new_password"
        app:layout_constraintTop_toBottomOf="@+id/et_new_password"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="35dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/confirm_new_password"
        app:layout_constraintBottom_toTopOf="@+id/et_old_password"
        app:layout_constraintTop_toBottomOf="@+id/et_confirm_new_password"
        tools:layout_editor_absoluteX="27dp" />

    <EditText
        android:id="@+id/et_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="106dp" />

</LinearLayout>